--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 
         <!-- logged in navigation -->
         <!-- todo: check for logged in user -->
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Admin</a></li>
+        <ul class="nav navbar-nav navbar-right" ng-show="currentUser.id">
+            <li><a ui-sref="admin">Admin</a></li>
             <li><a href="#">Purchases</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><a ui-sref="profile">Profile</a></li>
+            <li><a ng-click="main.logout()">Logout</a></li>
         </ul>
 
         <!-- not logged in navigation -->
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Sign in</a></li>
+        <ul class="nav navbar-nav navbar-right" ng-show="!currentUser.id">
+            <li><a ui-sref="authenticate">Register</a></li>
+            <li><a ui-sref="authenticate">Sign in</a></li>
         </ul>
     </div>
     </nav>
